# patex

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  package.cmake  patex-config.cmake.in  patex.pc  vcpkg-configuration.json  vcpkg.json
docker/: gtest.sh  run.sh
include/patex/: document.h  dom.h  patex.h
src/: Makefile  document.cpp  dom.cpp
t/: Makefile  xml.cpp
win/: bootstrap.bat  build.bat
